<resources>
    <string name="app_name">contraintlayout</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="singapore">Singapore</string>
    <string name="camera">Camera</string>
    <string name="enter_the_camera_type">Enter the Camera Type</string>
    <string name="settings">Settings</string>
    <string name="enter_the_camera_settings">Enter the Camera Settings</string>
    <string name="text">A constraint is a connection or alignment between two UI elements. Each constraint connects or aligns one view to another view, to the parent layout, or to an invisible guideline. In a ConstraintLayout, you position a view by defining at least one horizontal and one vertical constraint.</string>
    <string name="upload">upload</string>
    <string name="discard">DISCARD</string>
    <string name="track_order">Track Order</string>
    <string name="button_cancel">Cancel</string>
    <string name="order_number">Order Number</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="order_id">#DREERFD</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="we_have_confirmed_your_order">We have Confirmed your Order</string>
</resources>