<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header_screen"
        android:layout_width="match_parent"
        android:layout_height="?actionBarDivider"
        android:background="@color/green"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/arrow">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id_track_order"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/track_order"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal"></androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/green"
            android:text="@string/button_cancel"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText,MissingConstraints">

        </androidx.appcompat.widget.AppCompatButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/viewId"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/header_screen"></View>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/header_screen"
        tools:ignore="MissingConstraints"></View>

    <TextView
        android:id="@+id/estimate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/order_number"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_screen"></TextView>

    <TextView
        android:id="@+id/order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/estimated_time"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/estimate"
        app:layout_constraintTop_toBottomOf="@id/header_screen">

    </TextView>

    <TextView
        android:id="@+id/ordr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_id"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/estimate"
        app:layout_constraintStart_toStartOf="@id/estimate"
        app:layout_constraintTop_toBottomOf="@id/estimate">

    </TextView>

    <TextView
        android:id="@+id/timetext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_30_minutes"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/order"
        app:layout_constraintStart_toStartOf="@id/order"
        app:layout_constraintTop_toBottomOf="@id/order">

    </TextView>

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/timetext"
        tools:ignore="MissingConstraints"></View>

    <View
        android:id="@+id/viewprogress_remaining"
        android:layout_width="18dp"
        android:background="@drawable/view_status_remaining"
        app:layout_constraintBottom_toBottomOf="@id/image_status_remeaining"
        app:layout_constraintTop_toTopOf="@id/image_status_remeaining"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginStart="30dp"
        tools:ignore="MissingConstraints">
    </View>

    <ImageView
        android:id="@+id/image_status_remeaining"
        android:contentDescription="@string/app_name"
        android:layout_width="70dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:src="@drawable/order_placed"
        app:layout_constraintStart_toEndOf="@id/viewprogress_remaining"
        android:layout_height="70dp"
        ></ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>